make stats interface consistent with old pdv stats
